# httpjail

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCS_README.md  Dockerfile  README.md  SECURITY.md  askpass_macos.sh  book.toml  build.rs  debug_tempfile  debug_tempfile_drop  debug_thread_timing  test_dns_transparent.sh  test_jail.sh
.claude/: settings.json
.claude/commands/: ci.md  pr-compress.md  pr-submit.md
.codex/: config.toml
.config/: nextest.toml
.github/actions/check-docs-only/: action.yml
.github/workflows/: benchmark.yml  docs.yml  publish.yml  release.yml  test-with-cleanup.yml  tests.yml
benches/: rule_engines.rs
docs/: CI_NETWORK_LIMITATIONS.md  README.md  SUMMARY.md  custom.css  introduction.md
docs/advanced/: dns-exfiltration.md  dns-protection.md  docker.md  request-body-limiting.md  server-mode.md  tls-interception.md
docs/guide/: configuration.md  installation.md  javascript-rules.md  line-processor.md  platform-support.md  quick-start.md  request-logging.md  rule-engines.md
docs/guide/rule-engines/: index.md  javascript.md  line-processor.md  shell.md
docs/includes/: response-format-table.md
docs/reference/: cli.md
examples/: Dockerfile  console_log_demo.js  line_based_filter.py  profile_proc.rs  test_line_based.sh
scripts/: build-static.sh  bump_version.sh  ci-build.sh  ci-cleanup.sh  ci-run.sh  ci-scp.sh  ci-ssh.sh  ci-sync.sh  ci-test.sh  debug_cert_generation.sh  debug_namespace_dns.sh  debug_tls_env.sh  debug_tls_handshake.sh  fix_test_proxy_discovery.sh  get-pr-comments.sh  mdbook.sh  monitor-ci.sh  reply-to-comment.sh  wait-pr-checks.sh
src/: body_logger.rs  command_utils.rs  dangerous_verifier.rs  docker.rs  lib.rs  limited_body.rs  macos_keychain.rs  main.rs  proxy.rs  proxy_tls.rs  request_log.rs  rules.rs  sys_resource.rs  test_utils.rs  tls.rs
src/jail/: ci_config.rs  linux.rs  macos.rs  managed.rs  mod.rs  weak.rs
src/jail/linux/: dns.rs  docker.rs  iptables.rs  mod.rs  netlink.rs  nftables.rs  resources.rs
src/jail/macos/: fork.rs  mod.rs  resources.rs
src/rules/: common.rs  console_log.rs  pattern.rs  proc.rs  prog.rs  script.rs  shell.rs  v8_js.rs
tests/: body_logging_test.rs  integration_test.rs  jail_integration.rs  js_file_reload.rs  js_integration.rs  json_parity.rs  linux_integration.rs  macos_integration.rs  platform_test_macro.rs  script_integration.rs  self_request_loop.rs  smoke_test.rs  system_integration.rs  test_flag.rs  test_flag_methods.rs  weak_gh_integration.rs  weak_integration.rs  weak_integration_max_tx_bytes.rs
tests/common/: logging.rs  mod.rs  tracing_capture.rs
