[package]
name = "httpjail"
version = "0.1.7"
edition = "2024"
license = "CC0-1.0"
description = "Monitor and restrict HTTP/HTTPS requests from processes"
repository = "https://github.com/coder/httpjail"
keywords = ["network", "security", "proxy", "monitoring", "sandbox"]
categories = ["command-line-utilities", "network-programming", "development-tools"]

[features]
# Feature to enable isolated cleanup tests that should run separately in CI
isolated-cleanup-tests = []

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.13"
webpki-roots = "0.26"
lru = "0.12"
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
chrono = "0.4"
dirs = "6.0.0"
hyper-rustls = "0.27.7"
tls-parser = "0.12.2"
camino = "1.1.11"
filetime = "0.2"
ctrlc = "3.4"
url = "2.5"
v8 = "129"
atty = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
socket2 = "0.5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[profile.fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
